# aws-fastapi-todo-app

./: .gitignore  Makefile  README.md  cdk.json  pyproject.toml
cdk/: app.py  important_commands.sh
cdk/stacks/: cdk_backend_stack.py
lambda-layers/: Makefile
lambda-layers/common/: Makefile  requirements.txt
local-tests/: docker-compose.yml  local_tests.sh
src/todo_app/access_patterns/: todos.py
src/todo_app/api/v1/: main.py
src/todo_app/api/v1/routers/: todos.py
src/todo_app/api/v1/schemas/: schema-todos.json  schema.py
src/todo_app/api/v1/services/: exceptions.py  validator.py
src/todo_app/common/: enums.py  logger.py
src/todo_app/helpers/: dynamodb_helper.py
src/todo_app/models/: todos.py
terraform/: README.txt
